# SpyLab

./: .gitignore  README.md
backend/: .env_example  pyproject.toml  requirements.txt
backend/app/: app_config.py  auth_service.py  container.py  dashboard_service.py  db.py  face_model_invoker.py  face_region.py  face_repository.py  face_service.py  gql_schema.py  helpers.py  image_feeder.py  image_processor.py  main.py  router.py  user.py  user_repository.py
ui-ng/: README.md  angular.json  package.json
ui-ng/src/: index.html  styles.css
ui-ng/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  detail-modal-image.component.css  detail-modal-image.ts  detail-modal.component.ts  env.ts  finder.component.html  finder.component.ts
ui-ng/src/app/services/: data.service.ts
ui-react/: orval.config.ts  package.json
ui-react/src/: App.tsx  hooks.tsx
ui-react/src/api/: generated.schemas.ts  generated.ts  orvalMutator.ts
ui-react/src/components/: FacePicker.tsx  FaceSearchPanel.tsx  ImageUpload.tsx
ui-react/src/components/header/: index.tsx
ui-react/src/pages/dashboard/: home.tsx
ui-react/src/pages/face-finder/: list.tsx
ui-react/src/pages/login/: index.tsx
ui-react/src/pages/user/: list.tsx
ui-react/src/services/: apiClient.ts  apiClient.tsx  apiService.ts  apiService.tsx  authProvider.ts
